# tapo-observability

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  db.py  docker-compose.yml.example  main.py  pyproject.toml
clickhouse/config.d/: logging.xml
clickhouse/migrations/0001_init_power_tables/: down.sql
migrations/0001_init_power_tables/: up.sql
scripts/: connect-to-db.sh  entrypoint.sh  main.sh  start.sh  stop.sh
