[project]
name = "tapo-manager"
version = "0.1.0"
description = "Power observability for TP-Link Tapo smart plugs — samples power into ClickHouse"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "clickhouse-connect>=1.1.1",
    "python-dotenv>=1.2.2",
    "tapo>=0.9.0",
]
